2004-12-08  Dan Churchill <churchid@visi.com>

	* web/admin/select_team.jsp: Added Division to display of teams in the
	selection window, so it's possible to scan teams and verify divisions
	prior to tournament day.

2004-12-05  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/ChallengeParser.java (ChallengeParser): Use the
	context classloader to allow one to change the classloader without
	changing the code.

2004-11-23  Jon Schewe  <jpschewe@mtu.net>

	* web/WEB-INF/jspf/footer.jspf: Added sw version to the footer page.

	* web/instructions.jsp: Not about all teams being blank until
	scores are entered.

	* web/admin/remoteControl.jsp: Added note that it takes time for
	the big screen display to change.

2004-11-21  Jon Schewe  <jpschewe@mtu.net>

	* web/instructions.jsp: Remind users to not close the control
	window for the big screen display. 

2004-05-12  U-TOSHIBA-USER\jpschewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (computeTotalScore): Modified to catch
	SQLExceptions and to return Integer.MIN_VALUE in this case,
	signifing that the row is to be ignored (914631).

	* docs/index.html: Change link to point to the top level tomcat
	project and allow the users to find the actual builds (871671).

2004-05-11  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): factored out the sql
	datatype for tournaments to the top to make it easy to change the
	size of the column.

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Removed SummarizedScores table from the teamsRS query.  It was
	completly unused and would just slow down the join (836268). 

2004-04-07  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/ImportDB.java (importDatabase): Make sure that the
	division column is imported from the Judges table.

	* src/fll/model/SubjectiveTableModel.java: Modified
	SubjectiveTableModel to ignore case.  Although this shouldn't come
	up again much now that we don't have the language used column in
	Programming. (913700)
