@@ -266,19 +266,6 @@
         machines that will be used to enter subjective scores.
         <ul>
           <li>When prompted for where to install it choose c:\packages\jdk-1.4.2</li>
-          <li>When prompted for what to install, just check Program Files, you
-            don't need the other ones</li>
-          <li>When it's done you need to set the environment variable JAVA_HOME to point to the install location
-            <ol>
-              <li>Right click on My Computer and click on Properties</li>
-              <li>Goto Advanced</li>
-              <li>Click on Environment Variables</li>
-              <li>Under System Variables click New</li>
-              <li>For name put JAVA_HOME</li>
-              <li>For value put c:\packages\jdk-1.4.2</li>
-              <li>Click Ok, Ok, Ok</li>
-            </ol>
-          </li>
         </ul>
       </li>
 
